versioned_docs/version-4/transitions-and-events/intro.mdx
---
title: Transitions and events
description: 'A machine moves from state to state through transitions. Transitions are caused by events; when an event happens, the machine transitions to the next state.'
---

:::warning

**Docs for XState v4 are no longer maintained** 

This page is no longer maintained as [XState V5 has been released](/blog/2023-12-01-xstate-v5).

[Read about transitions and events in XState v5](/docs/transitions).

:::

A machine moves from state to state through **transitions**. Transitions are caused by events; when an event happens, the machine transitions to the next state.

:::video

Watch our [“Transitions and events” video on YouTube](https://www.youtube.com/watch?v=0qgP4RZyq58&list=PLvWgkXBB3dd4I_l-djWVU2UGPyBgKfnTQ&index=4) (1m50s).

:::

Transitions are “deterministic”; each combination of state and event always points to the same next state.

The arrows are transitions, and the rounded rectangles on the arrow’s lines are events. Each transition has a **source** state which comes before the transition, and a **target** state, which comes after the transition. The transition’s arrow starts from the source state and points to the target state.

<EmbedMachine
  name="Video player"
  embedURL="https://stately.ai/registry/editor/embed/e13bef2b-bb13-4465-96ac-0bc25340688e?machineId=9630e3b7-9f8e-4dc9-8b55-661f854d28b7"
/>

In the video player machine above, the events are *PLAY* and *PAUSE*. The *Play* event transitions from the *Paused* state to the *Playing* state. The *Pause* event transitions from the *Playing* state to the *Paused* state.

## Add a transition and event

1. Select an existing state.
2. Press or drag from one of the <Plus size={18} /> handles on the left, right and bottom sides of the selected state, and release to create a connecting transition, event and new state.

## Change the source and target states for a transition or event

First select the transition or event you want to change. Then…

### On the canvas

1. Right-click the transition or event, or use the <MoreHorizontal size={18} /> triple dot icon button, to open the Edit menu.
2. Choose **Switch source and target**.

### Dragging the transition handles

1. Drag the transition’s handle connected to the source state to connect it to a new source state.
2. Drag the transition’s handle connected to the target state to connect it to a new target state.

### Using the transition details panel

1. Open the transition <Info size={18} /> **Details** panel from the right tool menu.
2. Choose a new source state from the **Source** dropdown options.
3. Choose a new target state from the **Target** dropdown options.

:::xstate

## Looking for how to use transitions and events in XState?

Find out [more about transitions and events in XState](/xstate/basics/what-is-a-statechart.mdx#transitions-and-events) in the XState section of the docs.

:::
